# cmake-codegen

./: CMakeLists.txt  gen.sh  main.cxx
